k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fog
  labels:
    project: rpi-iot-edge
