k8s/10-mosquitto.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mosquitto
  namespace: fog
spec:
  serviceName: mosquitto
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2
          ports:
            - containerPort: 8883
              name: mqtt-tls
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          volumeMounts:
            - name: config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
            - name: config
              mountPath: /mosquitto/config/acl
              subPath: acl
            - name: certs
              mountPath: /mosquitto/certs
              readOnly: true
            - name: passwd
              mountPath: /mosquitto/secrets
              readOnly: true
            - name: data
              mountPath: /mosquitto/data
      volumes:
        - name: config
          configMap:
            name: mosquitto-config
        - name: certs
          secret:
            secretName: mosquitto-tls
        - name: passwd
          secret:
            secretName: mosquitto-passwd
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 2Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: fog
spec:
  type: NodePort
  selector:
    app: mosquitto
  ports:
    - name: mqtt-tls
      port: 8883
      targetPort: 8883
      nodePort: 30883
      protocol: TCP
