k8s/30-nodered.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodered
  namespace: fog
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nodered
  template:
    metadata:
      labels:
        app: nodered
    spec:
      containers:
        - name: nodered
          image: nodered/node-red:latest
          ports:
            - containerPort: 1880
          resources:
            requests:
              cpu: 100m
              memory: 192Mi
            limits:
              cpu: 400m
              memory: 384Mi
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nodered-data
---
apiVersion: v1
kind: Service
metadata:
  name: nodered
  namespace: fog
spec:
  type: ClusterIP
  selector:
    app: nodered
  ports:
    - port: 1880
      targetPort: 1880
